# esp32-toolkit

./: CMakeLists.txt  LICENSE  README.md
components/cli/: CMakeLists.txt  cli.c  cli.h  sdkonfig
components/webserver/: CMakeLists.txt  webserver.c
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  scan.c
